# AI-AutoContour

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  run.sh
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  engine.py  stub.py  vila_m3_client.py  vila_m3_engine.py
backend/app/api/: deps.py
backend/app/api/routers/: ai.py  auth.py  health.py  jobs.py  reports.py  results.py  studies.py  ws.py
backend/app/core/: config.py  logging.py  redis_client.py  security.py
backend/app/db/: base.py  init_db.py  seed.py  session.py
backend/app/models/: __init__.py  annotation.py  audit.py  finding.py  job.py  report.py  segmentation.py  study.py  user.py
backend/app/schemas/: ai.py  auth.py  results.py  study.py
backend/app/services/: dicom.py  overlay.py  reports.py  rtstruct.py  storage.py
backend/app/services/templates/: report.html
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_pipeline.py  test_vila_m3.py
docs/: 01-architecture.md  02-frontend.md  03-backend.md  04-database-schema.md  05-api-design.md  06-ai-pipeline.md  07-viewer.md  08-deployment.md  09-docker.md  10-cicd.md  11-roadmap.md  12-mvp-plan.md  13-production-strategy.md  README.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infra/: backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  nginx.conf  vila-m3-gpu.Dockerfile  vila-m3-monai-setup.sh  vila-m3.Dockerfile
scripts/: download-vila-checkpoint.sh  (+1 more)
(+54 files in other folders)
