[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumira-backend"
version = "0.1.0"
description = "Lumira AI Medical Imaging Platform - backend (API + worker)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.x is incompatible with bcrypt>=4.1 (backend probe raises on >72-byte
    # secret); pin to the last compatible release.
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "celery>=5.3",
    "redis>=5.0",
    "boto3>=1.34",
    "pydicom>=2.4",
    "numpy>=1.26",
    "jinja2>=3.1",
    "weasyprint>=61.0",
    "python-docx>=1.1",
    "websockets>=12.0",
    "email-validator>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
# Heavy AI deps are intentionally NOT installed in iteration 1 (stub engine).
# Enable in Phase 1 when integrating real models:
ai = [
    "torch",
    "monai",
    "SimpleITK",
    "opencv-python-headless",
    "TotalSegmentator",
    "nnunetv2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
